<resources>
    <string name="app_name">ChallengeEnam</string>
    <string name="judul_film">Judul Film</string>
    <string name="rated_movie">Rated Movie</string>
    <string name="tanggal_release">Tanggal Release</string>
    <string name="synopsis_film">Synopsis Film</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="home">Home</string>
    <string name="txt_login">Login</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="et_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="login_using_google">Login Using Google</string>
    <string name="txt_selamat_datang">Selamat Datang</string>
    <string name="profile">Profile</string>
    <string name="masukkan_uname">Masukkan Username</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="masukkan_tanggal_lahir">Masukkan Tanggal Lahir</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="data_user">Data User</string>
    <string name="username">Username</string>
    <string name="nama_panjang">Nama Panjang</string>
    <string name="ttl" />
    <string name="txt_alamat" />
    <string name="datang_kembali">Jangan Lupa Datang Kembali</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_username2">Masukkan Username</string>
    <string name="masukkan_password2">Masukkan Password</string>
    <string name="ulang_password">Masukkan Ulang Password</string>
    <string name="register">Register</string>
    <string name="judul_film_item">Judul Film</string>
    <string name="date_film">28 April 2023</string>
    <string name="txt_register">Register</string>
    <string name="txt_favorite">Favorite</string>
</resources>