<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.ProfileActivity">

    <TextView
        android:id="@+id/txtProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/etUnameProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtProf"
        android:layout_marginTop="50dp"
        android:hint="@string/masukkan_uname"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etNameProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUnameProf"
        android:hint="@string/masukkan_nama_lengkap"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNameProf"
        android:hint="@string/masukkan_tanggal_lahir"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDate"
        android:hint="@string/masukkan_alamat"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddress"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/update" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpdate"
        android:layout_centerHorizontal="true"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/data_user"/>

    <TextView
        android:id="@+id/txtUname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUser"
        android:textSize="15sp"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUname"
        android:textSize="15sp"
        android:text="@string/nama_panjang"/>

    <TextView
        android:id="@+id/txtTtl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:textSize="15sp"
        android:text="@string/ttl"/>

    <TextView
        android:id="@+id/txtAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTtl"
        android:textSize="15sp"
        android:text="@string/txt_alamat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/datang_kembali"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>