<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.DetailActivity">

    <ImageView
        android:id="@+id/imgDet"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_centerHorizontal="true"
        android:contentDescription="TODO"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/titleDet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_film"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgDet"/>

    <TextView
        android:id="@+id/ratedDet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rated_movie"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titleDet"/>

    <TextView
        android:id="@+id/releaseDet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_release"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ratedDet"/>

    <TextView
        android:id="@+id/synopDet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synopsis_film"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/releaseDet"/>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favoritedua_foreground"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>